# opengl-playground

./: CMakeLists.txt  main.cpp
assets/shaders/: default.fsh  default.vsh
docs/: LibrariesVersions.md
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glfw/include/GLFW/: glfw3.h
libs/stb/src/: stb_image.c
src/: Shader.cpp  Shader.hpp  ShaderUniform.cpp  ShaderUniform.hpp  ShaderUniformStore.cpp  ShaderUniformStore.hpp  Utilities.cpp  Utilities.hpp  VertexFormat.hpp
src/camera/: FreeMotionCamera.cpp  FreeMotionCamera.hpp  MovementDirection.hpp
src/model/: GeometricModel.hpp  GeometricModelFactory.cpp  GeometricModelFactory.hpp
